addrd out of 5 in rating

--- a/K_Bhansali_frontendproblem3.html
+++ b/K_Bhansali_frontendproblem3.html
@@ -178,7 +178,7 @@ function render() {
 			output += "<div class='thumbnail'><img src='" +book.thumbnail +"'></div>";
 			output += "<div class='title'>";
 			output += "<h3>" + book.title +book.subtitle +"</h3>";
-			output += "<span>Rating: " +book.rating +"| Categories: " +book.categories+"</span><br>";
+			output += "<span>Rating: " +book.rating +"/5 | Categories: " +book.categories+"</span><br>";
 			output += "<span>Author: " +book.authors +"</span><br>";
 			output += "<a class='book_link' target='_blank' href='" +book.infoLink +"'>Go to Book's Page </a> | ";
 			output += "<a class='book_link' target='_blank' href='" +book.previewLink +"'>Book preview</a>";
